dot_config/nvim/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name 
  namespace: 
  labels:
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
    spec:
      containers:
      - name: *name
        image: 
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 
            memory: 
          limits:
            cpu: 
            memory: 
        command:
        - null
        args:
        - null
        ports:
        - name: 
          protocol: TCP
          containerPort: 
        volumeMounts:
        - name: 
          mountPath: 
        startupProbe:
          tcpSocket:
            port: 
          initialDelaySeconds: 
          timeoutSeconds: 
          periodSeconds: 
          successThreshold: 
          failureThreshold: 
        livenessProbe:
          tcpSocket:
            port: 
          initialDelaySeconds: 
          timeoutSeconds: 
          periodSeconds: 
          successThreshold: 
          failureThreshold: 
        readinessProbe:
          tcpSocket:
            port: 
          initialDelaySeconds: 
          timeoutSeconds: 
          periodSeconds: 
          successThreshold: 
          failureThreshold: 
      volumes:
      - name: 
        persistentVolumeClaim:
          claimName:
