dot_config/nvim/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name 
  namespace: 
  labels:
    app.kubernetes.io/name: *name
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
  - name: 
    protocol: TCP
    port: 
    targetPort: 
  type: ClusterIP
